[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.0', 'wheel']

[project]
name = 'wriggle'
requires-python = '>=3.12'
version = '0.0.0'

[project.optional-dependencies]
pre-commit = [
    'actionlint-py',
    'basedpyright',
    'codespell',
    'cookiecutter',
    'djlint',
    'django-upgrade',
    'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
    'helicopyter',
    'pre-commit',
    'pre-commit-hooks',
    'ruff',
    'shellcheck-py',
    'shfmt-py',
    'typos',
    'validate-pyproject',
    'yamllint',
]

[tool.basedpyright]
extends = '.biobuddies/basedpyright.toml'
venv = '.venv'
venvPath = '.'

[tool.ruff]
extend = '.biobuddies/ruff.toml'
